<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="198dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="86dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp" />

    <ImageButton
        android:id="@+id/top_rated_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/rated_button_background"
        android:contentDescription="@string/highly_rated"
        android:scaleType="fitXY"
        android:src="@drawable/svg_rated_grey_circle_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <ImageButton
        android:id="@+id/popular_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/popular_button_background"
        android:contentDescription="@string/popular"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <ImageButton
        android:id="@+id/favourites_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/favourites_button_background"
        android:contentDescription="@string/favourites"
        android:scaleType="fitXY"
        android:src="@drawable/svg_favs_grey_circle_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="86dp" />
</android.support.constraint.ConstraintLayout>